--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "koa-jwt": "^3.3.1",
     "koa-logger": "^2.0.1",
     "koa-router": "^7.4.0",
-    "mongoose": "^5.0.14"
+    "mongoose": "^5.0.14",
+    "mongoose-simple-random": "^0.4.1"
   }
 }
