--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "jsonwebtoken": "^8.2.1",
     "koa": "^2.5.0",
+    "koa-body": "^4.0.4",
     "koa-body-parser": "^1.1.2",
     "koa-bodyparser": "^4.2.0",
     "koa-jwt": "^3.3.1",
