--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "co-busboy": "^1.4.0",
+    "elasticsearch": "^15.1.1",
     "jsonwebtoken": "^8.2.1",
     "koa": "^2.5.0",
     "koa-body": "^4.0.4",
@@ -18,6 +19,7 @@
     "koa-jwt": "^3.3.1",
     "koa-logger": "^2.0.1",
     "koa-router": "^7.4.0",
+    "mongo-connector": "0.0.2",
     "mongoose": "^5.0.14",
     "mongoose-simple-random": "^0.4.1",
     "request": "^2.85.0"
