--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "koa-bodyparser": "^4.2.0",
     "koa-jwt": "^3.3.1",
     "koa-logger": "^2.0.1",
+    "koa-multer": "^1.0.2",
     "koa-router": "^7.4.0",
     "mongo-connector": "0.0.2",
     "mongoose": "^5.0.14",
